Ajout de sécurité sur les `Routes`et ajout de plusieurs fichiers `SCSS`

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -1,12 +1,5 @@
-*,
-::before,
-::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-html {
-  background-color: teal;
-  color: white;
-}
+@import "./base";
+@import "./layout";
+@import "./header";
+@import "./movies";
+@import "./movie";
