--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,40 @@
   padding: 0;
 }
 
-html {
-  font-family: Arial, sans-serif;
+body {
+  font-family: Helvetica, Arial, sans-serif;
+}
+
+.container-medium {
+  width: 100%;
+  max-width: 90%;
+  margin: 0 auto;
+}
+
+.header {
+  padding: 20px 0;
+}
+.header__list {
+  display: flex;
+  list-style-type: none;
+  column-gap: 10px;
+}
+
+.movies__items {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  margin-top: 20px;
+}
+.movies__film-poster {
+  max-width: 100%;
+  width: 300px;
+}
+
+.movie__gallery {
+  display: flex;
+  column-gap: 10px;
+}
+.movie__picture {
+  width: 300px;
 }
