--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,8 +6,19 @@
   padding: 0;
 }
 
-body {
+a {
+  color: inherit;
+  text-decoration: none;
   font-family: Helvetica, Arial, sans-serif;
+}
+
+body {
+  font-size: 62.5%;
+  font-family: Helvetica, Arial, sans-serif;
+  max-width: 100%;
+  height: 100vh;
+  background: linear-gradient(110.14deg, #0D1741 18.96%, #77CAD8 89.71%);
+  color: white;
 }
 
 .container-medium {
@@ -16,13 +27,45 @@ body {
   margin: 0 auto;
 }
 
+.button-container {
+  position: relative;
+  width: 15rem;
+  height: 3rem;
+  border-radius: 200px;
+  border-style: none;
+  font-weight: 600;
+  font-size: 1rem;
+  letter-spacing: 0.75px;
+  background-color: #fcc66c;
+  color: #0d1741;
+  mix-blend-mode: difference;
+  cursor: pointer;
+}
+.button-container.secondary {
+  border: 2px solid #fcc66c;
+  background-color: transparent;
+  color: #fcc66c;
+}
+
 .header {
+  height: 12vh;
   padding: 20px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header__nav {
+  display: flex;
+  flex-wrap: wrap;
 }
 .header__list {
   display: flex;
+  justify-content: center;
+  align-items: center;
   list-style-type: none;
-  column-gap: 10px;
+  font-size: 1.15rem;
+  gap: 2.5rem;
+  width: 50%;
 }
 
 .movies__items {
@@ -42,4 +85,59 @@ body {
 }
 .movie__picture {
   width: 300px;
+}
+
+.home-container {
+  height: 88vh;
+  overflow: hidden;
+}
+.home-container .left {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  width: 30%;
+  margin: 2rem;
+}
+.home-container .left .logo {
+  width: 100%;
+  height: 10rem;
+}
+.home-container .left .logo img {
+  object-fit: contain;
+  aspect-ratio: 1;
+  width: 100%;
+  height: 100%;
+}
+.home-container .left .infos {
+  display: flex;
+  padding: 0 15px;
+  font-size: 0.95rem;
+  line-height: 1.25rem;
+  letter-spacing: 0.95px;
+  text-justify: center;
+}
+.home-container .left .actions {
+  margin-top: 2rem;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+.home-container .hero-container {
+  position: absolute;
+  pointer-events: none;
+  width: 80vw;
+  bottom: -5px;
+  right: 0;
+}
+.home-container .hero-container img {
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+}
+
+@font-face {
+  font-family: "PeaceSans";
+  src: url("../fonts/PeaceSans.ttf");
 }
