--- a/public/scss/_base.scss
+++ b/public/scss/_base.scss
@@ -4,8 +4,20 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  font-family: Helvetica, Arial, sans-serif;
 }
 
 body {
+  font-size: 62.5%;
   font-family: Helvetica, Arial, sans-serif;
+  max-width: 100%;
+  height: 100vh;
+  background: linear-gradient(110.14deg, #0D1741 18.96%, #77CAD8 89.71%);
+  color:white;
 }
