--- a/public/scss/_layout.scss
+++ b/public/scss/_layout.scss
@@ -1,5 +1,27 @@
 .container-medium {
-    width: 100%;
-    max-width: 90%;
-    margin: 0 auto;
+  width: 100%;
+  max-width: 90%;
+  margin: 0 auto;
+}
+
+.button-container {
+  position: relative;
+  width: 15rem;
+  height: 3rem;
+  border-radius: 200px;
+  border-style: none;
+  font-weight: 600;
+  font-size: 1rem;
+  letter-spacing: 0.75px;
+  background-color: #fcc66c;
+  color: #0d1741;
+  mix-blend-mode: difference;
+  cursor: pointer;
+
+  &.secondary {
+    border: 2px solid #fcc66c;
+    background-color: transparent;
+    color: #fcc66c;
+
+  }
 }
