--- a/public/scss/_header.scss
+++ b/public/scss/_header.scss
@@ -12,15 +12,37 @@
 
   &__list {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     list-style-type: none;
     font-size: 1.15rem;
     gap: 2.5rem;
-    width: 50%;
+    width: 100%;
+    margin: 0 16rem;
 
-    // &__item{
+  }
 
-    // }
+  &__item{
+    position: relative;
+    transition: 2s;
+    font-family: HumanChubby;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+
+    &::after {
+      content : '';
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      transition: .25s;
+      width: 0;
+      height: 1px;
+      background-color: var(--white);
+    }
+    &:hover:after {
+      width: 100%;
+    }
   }
 }
