--- a/public/scss/_layout.scss
+++ b/public/scss/_layout.scss
@@ -6,22 +6,69 @@
 
 .button-container {
   position: relative;
-  width: 15rem;
+  width: 100%;
   height: 3rem;
   border-radius: 200px;
   border-style: none;
   font-weight: 600;
   font-size: 1rem;
   letter-spacing: 0.75px;
-  background-color: #fcc66c;
-  color: #0d1741;
-  mix-blend-mode: difference;
+  background-color: var(--primary);
+  color: var(--background-gradient);
   cursor: pointer;
+  filter: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04))
+    drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+
+  &:hover {
+    background-color: var(--secondary);
+  }
 
   &.secondary {
-    border: 2px solid #fcc66c;
+    border: 2px solid var(--primary);
     background-color: transparent;
-    color: #fcc66c;
+    color: var(--primary);
 
+    &:hover {
+      border: 2px solid var(--secondary);
+      background-color: transparent;
+      color: var(--secondary);
+    }
   }
+}
+
+.input-container {
+  position: relative;
+  width: 100%;
+  height: 3.5rem;
+  border-radius: 200px;
+  border: 2.25px solid var(--white);
+  font-weight: 600;
+  font-size: 1rem;
+  letter-spacing: 0.75px;
+  background-color: transparent;
+  color: var(--white);
+  cursor: pointer;
+  padding: 0 1rem;
+
+  &:focus {
+    outline: 2px solid var(--primary);
+  }
+
+  &::placeholder {
+    opacity: 0.25;
+    color: var(--white);
+  }
+}
+
+h1.title {
+  font-family: PeaceSans;
+  font-size: 2rem;
+  letter-spacing: 0.85px;
+  margin-top: 2rem;
+  color:var(--primary);
+
+  @media (min-width: 1024px) {
+    font-size: 3rem;
+  }
+  
 }
