--- a/public/scss/home/home.scss
+++ b/public/scss/home/home.scss
@@ -13,8 +13,7 @@
       width: 100%;
       height: 10rem;
 
-      img {
-        object-fit: contain;
+      svg {
         aspect-ratio: 1;
         width: 100%;
         height: 100%;
