--- a/public/scss/_header.scss
+++ b/public/scss/_header.scss
@@ -18,11 +18,10 @@
     font-size: 1.15rem;
     gap: 2.5rem;
     width: 100%;
-    margin: 0 16rem;
-
+    margin: 0 12rem;
   }
 
-  &__item{
+  &__item {
     position: relative;
     transition: 2s;
     font-family: HumanChubby;
@@ -30,13 +29,13 @@
     letter-spacing: 1px;
 
     &::after {
-      content : '';
+      content: "";
       position: absolute;
       top: 100%;
       left: 0;
       width: 100%;
       height: 100%;
-      transition: .25s;
+      transition: 0.25s;
       width: 0;
       height: 1px;
       background-color: var(--white);
