--- a/public/scss/_layout.scss
+++ b/public/scss/_layout.scss
@@ -4,6 +4,10 @@
   margin: 0 auto;
 }
 
+body:has(section.home-container, section.login-container) {
+  overflow: hidden;
+}
+
 .button-container {
   position: relative;
   width: 100%;
@@ -18,6 +22,14 @@
   cursor: pointer;
   filter: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04))
     drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+
+  a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
   &:hover {
     background-color: var(--secondary);
@@ -47,7 +59,6 @@
   letter-spacing: 0.75px;
   background-color: transparent;
   color: var(--white);
-  cursor: pointer;
   padding: 0 1rem;
 
   &:focus {
@@ -65,10 +76,9 @@ h1.title {
   font-size: 2rem;
   letter-spacing: 0.85px;
   margin-top: 2rem;
-  color:var(--primary);
+  color: var(--primary);
 
   @media (min-width: 1024px) {
     font-size: 3rem;
   }
-  
 }
