--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,8 +16,11 @@ body {
   font-family: Helvetica, Arial, sans-serif;
   max-width: 100%;
   height: 100vh;
-  background: linear-gradient(110.14deg, #0D1741 18.96%, #77CAD8 89.71%);
+  background: linear-gradient(110.14deg, #0d1741 18.96%, #77cad8 89.71%);
   color: white;
+}
+body:has(section.movies) {
+  height: auto;
 }
 
 .container-medium {
@@ -143,11 +146,66 @@ h1.title {
   width: 100%;
 }
 
+.movies {
+  padding: 40px 0;
+}
+.movies__heading {
+  font-size: 2rem;
+}
 .movies__items {
   display: flex;
   flex-direction: column;
   row-gap: 20px;
   margin-top: 20px;
+}
+.movies__item {
+  cursor: pointer;
+  overflow: hidden;
+  display: flex;
+  background-color: white;
+  color: black;
+  border-radius: 5px;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
+  transition: box-shadow 0.4s ease-in-out, transform 0.4s ease-in-out;
+  padding: 20px;
+}
+@media screen and (max-width: 550px) {
+  .movies__item {
+    flex-direction: column;
+  }
+}
+@media screen and (min-width: 500px) {
+  .movies__item:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
+  }
+}
+.movies__right {
+  width: 200px;
+  flex-basis: 200px;
+  height: 200px;
+  margin: auto;
+}
+.movies__right img {
+  width: 100%;
+  height: 100%;
+}
+.movies__left {
+  flex: 1;
+  padding-right: 20px;
+}
+.movies__title {
+  font-size: 1.4rem;
+}
+.movies__released-at {
+  font-size: 1rem;
+  font-style: italic;
+  margin: 10px 0;
+}
+.movies__synopsis {
+  font-size: 0.9rem;
+  line-height: 1.4;
+  margin: 10px 0;
 }
 .movies__film-poster {
   max-width: 100%;
