--- a/public/scss/_base.scss
+++ b/public/scss/_base.scss
@@ -4,7 +4,6 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  
 }
 
 a {
@@ -17,6 +16,10 @@ body {
   font-family: Helvetica, Arial, sans-serif;
   max-width: 100%;
   height: 100vh;
-  background: linear-gradient(110.14deg, #0D1741 18.96%, #77CAD8 89.71%);
-  color:white;
+  background: linear-gradient(110.14deg, #0d1741 18.96%, #77cad8 89.71%);
+  color: white;
+
+  &:has(section.movies) {
+    height: auto;
+  }
 }
