--- a/public/scss/_movies.scss
+++ b/public/scss/_movies.scss
@@ -1,13 +1,75 @@
 .movies {
-    &__items {
-        display: flex;
-        flex-direction: column;
-        row-gap: 20px;
-        margin-top: 20px;
+  padding: 40px 0;
+
+  &__heading {
+    font-size: 2rem;
+  }
+
+  &__items {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+    margin-top: 20px;
+  }
+
+  &__item {
+    cursor: pointer;
+    overflow: hidden;
+    display: flex;
+    background-color: white;
+    color: black;
+    border-radius: 5px;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
+    transition: box-shadow 0.4s ease-in-out, transform 0.4s ease-in-out;
+    padding: 20px;
+
+    @media screen and (max-width: 550px) {
+      flex-direction: column;
     }
 
-    &__film-poster {
-        max-width: 100%;
-        width: 300px;
+    &:hover {
+      @media screen and (min-width: 500px) {
+        transform: scale(1.05);
+        box-shadow: 0 0 8px rgba(0, 0, 0, 0.4);
+      }
     }
+  }
+
+  &__right {
+    width: 200px;
+    flex-basis: 200px;
+    height: 200px;
+    margin: auto;
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__left {
+    flex: 1;
+    padding-right: 20px;
+  }
+
+  &__title {
+    font-size: 1.4rem;
+  }
+
+  &__released-at {
+    font-size: 1rem;
+    font-style: italic;
+    margin: 10px 0;
+  }
+
+  &__synopsis {
+    font-size: 0.9rem;
+    line-height: 1.4;
+    margin: 10px 0;
+  }
+
+  &__film-poster {
+    max-width: 100%;
+    width: 300px;
+  }
 }
