--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -4,7 +4,8 @@
 @import "./movies";
 @import "./movie";
 @import "./home/home.scss";
-@import "./login/login.scss";
+@import "./account/login.scss";
+@import "./account/register.scss";
 
 @font-face {
     font-family: 'PeaceSans';
