--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,8 +25,13 @@ body:has(section.movies) {
 
 .container-medium {
   width: 100%;
-  max-width: 90%;
+  max-width: 95%;
   margin: 0 auto;
+}
+@media (min-width: 1024px) {
+  .container-medium {
+    max-width: 85%;
+  }
 }
 
 body:has(section.home-container, section.login-container) {
@@ -104,7 +109,7 @@ h1.title {
 
 .header {
   height: 12vh;
-  padding: 20px 0;
+  padding: 10px 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -118,13 +123,21 @@ h1.title {
   justify-content: space-around;
   align-items: center;
   list-style-type: none;
-  font-size: 1.15rem;
-  gap: 2.5rem;
+  font-size: 0.75rem;
+  gap: 1rem;
   width: 100%;
-  margin: 0 12rem;
+  margin: 0;
+}
+@media (min-width: 1024px) {
+  .header__list {
+    margin: 0 6rem;
+    font-size: 1.15rem;
+    gap: 2.5rem;
+  }
 }
 .header__item {
   position: relative;
+  text-align: center;
   transition: 2s;
   font-family: HumanChubby;
   text-transform: uppercase;
@@ -228,8 +241,8 @@ h1.title {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  width: 30%;
-  margin: 2rem;
+  width: 50%;
+  padding: 2rem 6rem;
 }
 .home-container .left .logo {
   width: 100%;
@@ -249,12 +262,12 @@ h1.title {
   text-justify: center;
 }
 .home-container .left .actions {
-  margin-top: 2rem;
   display: flex;
   align-items: center;
   justify-items: center;
   flex-direction: column;
   gap: 1rem;
+  padding: 0 2.5rem;
 }
 .home-container .hero-container {
   position: absolute;
@@ -271,18 +284,17 @@ h1.title {
 
 .login-container {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: row;
   height: 88vh;
-  justify-content: center;
-  gap: 2rem;
+  justify-content: baseline;
+  padding: 0 1rem;
 }
 @media (min-width: 1024px) {
   .login-container {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
     width: 100vw;
     height: 88vh;
+    justify-content: center;
   }
 }
 .login-container .right {
@@ -290,12 +302,13 @@ h1.title {
   flex-direction: column;
   width: 100%;
   align-items: center;
-  padding: 4rem 0;
+  padding: 0;
 }
 @media (min-width: 1024px) {
   .login-container .right {
-    width: 40%;
+    width: 45%;
     align-items: flex-start;
+    padding: 2rem 0;
   }
 }
 .login-container .right p {
@@ -316,14 +329,15 @@ h1.title {
   margin: 1rem 0;
   display: flex;
   gap: 2rem;
-  width: 50%;
+  width: 100%;
   flex-direction: column;
   align-items: center;
 }
 @media (min-width: 1024px) {
   .login-container .right form {
-    margin: 2rem 0;
+    margin: 0rem 0;
     gap: 1rem;
+    width: 50%;
   }
 }
 .login-container .right form label {
@@ -340,13 +354,15 @@ h1.title {
 }
 .login-container .right form a {
   font-size: 1rem;
+  opacity: 0.65;
 }
 .login-container .left {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  height: 35%;
+  width: 0;
+  height: 0;
+  overflow: hidden;
   object-fit: contain;
   position: relative;
 }
@@ -354,6 +370,7 @@ h1.title {
   .login-container .left {
     height: 100%;
     width: 45%;
+    overflow: visible;
   }
 }
 .login-container .left .scene {
@@ -369,6 +386,132 @@ h1.title {
   border-radius: 999999px;
   filter: blur(2.5px);
   background-color: red;
+}
+
+.register-container {
+  display: flex;
+  flex-direction: column-reverse;
+  height: auto;
+  justify-content: center;
+  gap: 2rem;
+  padding: 0 1rem;
+  overflow: hidden;
+}
+@media (min-width: 1024px) {
+  .register-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100vw;
+    height: 88vh;
+  }
+}
+.register-container .right {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  padding: 0;
+}
+@media (min-width: 1024px) {
+  .register-container .right {
+    width: 45%;
+    align-items: flex-start;
+    padding: 2rem 0;
+  }
+}
+.register-container .right p {
+  margin: 0.25rem 0;
+  font-size: 0.9rem;
+  width: 85%;
+  text-align: center;
+}
+@media (min-width: 1024px) {
+  .register-container .right p {
+    font-size: 1rem;
+    text-align: left;
+    width: 75%;
+    margin-bottom: 2rem;
+  }
+}
+.register-container .right form {
+  margin: 3.25rem 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  width: 100%;
+  align-items: center;
+}
+@media (min-width: 1024px) {
+  .register-container .right form {
+    margin: 0rem 0;
+  }
+}
+.register-container .right form label {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  font-size: 0.85rem;
+  width: 100%;
+}
+@media (min-width: 1024px) {
+  .register-container .right form label {
+    font-size: 1rem;
+    width: 45%;
+  }
+}
+.register-container .right form label span {
+  transition: 0.5s;
+  padding: 0.1rem 0.5rem;
+}
+.register-container .right form .submit {
+  width: 100%;
+}
+@media (min-width: 1024px) {
+  .register-container .right form .submit {
+    width: 50%;
+  }
+}
+.register-container .right form a {
+  font-size: 1rem;
+  width: 100%;
+  text-align: center;
+  opacity: 0.65;
+}
+@media (min-width: 1024px) {
+  .register-container .right form a {
+    width: 55%;
+  }
+}
+.register-container .left {
+  justify-content: center;
+  align-items: center;
+  object-fit: contain;
+  position: relative;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+}
+@media (min-width: 1024px) {
+  .register-container .left {
+    height: 100%;
+    width: 30%;
+    display: flex;
+  }
+}
+.register-container .left .scene {
+  width: auto;
+  height: 75%;
+  z-index: 2;
+}
+.register-container .left .background {
+  position: absolute;
+  width: 85%;
+  height: auto;
+  aspect-ratio: 1/1;
+  border-radius: 999999px;
+  filter: blur(2.5px);
 }
 
 @font-face {
