--- a/public/scss/account/login.scss
+++ b/public/scss/account/login.scss
@@ -1,16 +1,15 @@
 .login-container {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: row;
   height: 88vh;
-  justify-content: center;
-  gap: 2rem;
+  justify-content:baseline;
+  padding:0 1rem;
 
   @media (min-width: 1024px) {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
     width: 100vw;
     height: 88vh;
+    justify-content: center;
   }
 
   .right {
@@ -18,11 +17,12 @@
     flex-direction: column;
     width: 100%;
     align-items: center;
-    padding: 4rem 0;
+    padding:0;
 
     @media (min-width: 1024px) {
-      width: 40%;
+      width: 45%;
       align-items: flex-start;
+      padding: 2rem 0;
     }
 
     p {
@@ -43,13 +43,14 @@
       margin: 1rem 0;
       display: flex;
       gap: 2rem;
-      width: 50%;
+      width: 100%;
       flex-direction: column;
       align-items: center;
 
       @media (min-width: 1024px) {
-        margin: 2rem 0;
+        margin: 0rem 0;
         gap: 1rem;
+        width: 50%;
       }
 
       label {
@@ -68,6 +69,7 @@
 
       a {
         font-size: 1rem;
+        opacity: .65;
       }
     }
   }
@@ -76,14 +78,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 35%;
+    width: 0;
+    height: 0;
+    overflow: hidden;
     object-fit: contain;
     position: relative;
 
     @media (min-width: 1024px) {
       height: 100%;
       width: 45%;
+      overflow:visible;
     }
 
     .scene {
