--- a/public/scss/home/home.scss
+++ b/public/scss/home/home.scss
@@ -6,8 +6,8 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    width: 30%;
-    margin:2rem;
+    width: 50%;
+    padding: 2rem 6rem;
 
     .logo {
       width: 100%;
@@ -20,23 +20,21 @@
       }
     }
     .infos {
-        display: flex;
-        padding: 0 15px;
-        font-size: .95rem;
-        line-height: 1.25rem;
-        letter-spacing: .95px;
-        text-justify: center;
-      }
-    .actions {
-        margin-top: 2rem;
-        display: flex;
-        align-items: center;
-        justify-items: center;
-        flex-direction: column;
-        gap:1rem;
-
+      display: flex;
+      padding: 0 15px;
+      font-size: 0.95rem;
+      line-height: 1.25rem;
+      letter-spacing: 0.95px;
+      text-justify: center;
     }
-    
+    .actions {
+      display: flex;
+      align-items: center;
+      justify-items: center;
+      flex-direction: column;
+      gap: 1rem;
+      padding:0 2.5rem;
+    }
   }
 
   .hero-container {
