--- a/public/scss/_base.scss
+++ b/public/scss/_base.scss
@@ -19,7 +19,7 @@ body {
   background: linear-gradient(110.14deg, #0d1741 18.96%, #77cad8 89.71%);
   color: white;
 
-  &:has(section.movies) {
+  &:has(section.movies, section.actors, section.gallery) {
     height: auto;
   }
 }
