--- a/public/scss/_movies.scss
+++ b/public/scss/_movies.scss
@@ -1,6 +1,12 @@
 .movies {
   padding: 40px 0;
 
+  &__link {
+    &--admin {
+      font-size: 0.8rem;
+    }
+  }
+
   &__heading {
     font-size: 2rem;
   }
@@ -10,6 +16,11 @@
     flex-direction: column;
     row-gap: 20px;
     margin-top: 20px;
+  }
+
+  &__actions {
+    display: flex;
+    justify-content: flex-end;
   }
 
   &__item {
