inchallah on passe en dernier

--- a/public/scss/_layout.scss
+++ b/public/scss/_layout.scss
@@ -14,7 +14,7 @@ body:has(section.home-container, section.login-container) {
 
 .button-container {
   position: relative;
-  width: 100%;
+  width: 325px;
   height: 3rem;
   border-radius: 200px;
   border-style: none;
