--- a/public/scss/_movie.scss
+++ b/public/scss/_movie.scss
@@ -8,11 +8,16 @@
     position: absolute;
     top: -1rem;
     left: 0;
-    height: 60vh;
+    height: 30vh;
     width: 100vw;
-    padding: 0 6rem;
+    padding: 0 2.5rem;
     overflow: hidden;
     background-color: var(--background-gradient);
+
+    @media (min-width: 1024px) {
+      height: 60vh;
+      padding: 0 6rem;
+    }
   }
   &__banner-item {
     position: relative;
@@ -23,14 +28,25 @@
     align-items: center;
 
     .backdropmask {
-      -webkit-box-shadow: inset 80px 10px 80px 20px var(--background-gradient),
-        inset -80px 10px 80px 20px var(--background-gradient),
-        inset -80px -30px -80px 20px var(--background-gradient),
-        inset -80px 10px 80px -20px var(--background-gradient);
-      box-shadow: inset 80px 10px 80px 20px var(--background-gradient),
-        inset -80px 10px 80px 20px var(--background-gradient),
-        inset -80px -30px 80px 20px var(--background-gradient),
-        inset -80px 10px 80px 20px var(--background-gradient);
+      -webkit-box-shadow: inset 30px 2px 30px 5px var(--background-gradient),
+        inset -30px 2px 30px 5px var(--background-gradient),
+        inset -30px -30px -30px 5px var(--background-gradient),
+        inset -30px 2px 30px -5px var(--background-gradient);
+      box-shadow: inset 30px 2px 30px 5px var(--background-gradient),
+        inset -30px 2px 30px 5px var(--background-gradient),
+        inset -30px -30px 30px 5px var(--background-gradient),
+        inset -30px 2px 30px 5px var(--background-gradient);
+
+      @media (min-width: 1024px) {
+        -webkit-box-shadow: inset 80px 10px 80px 20px var(--background-gradient),
+          inset -80px 10px 80px 20px var(--background-gradient),
+          inset -80px -30px -80px 20px var(--background-gradient),
+          inset -80px 10px 80px -20px var(--background-gradient);
+        box-shadow: inset 80px 10px 80px 20px var(--background-gradient),
+          inset -80px 10px 80px 20px var(--background-gradient),
+          inset -80px -30px 80px 20px var(--background-gradient),
+          inset -80px 10px 80px 20px var(--background-gradient);
+      }
 
       height: 100%;
       width: 100%;
@@ -48,9 +64,40 @@
 
   &__infos {
     display: flex;
-    margin-top: 48vh;
+    flex-wrap: wrap;
+    margin-top: 15vh;
+    flex-direction: column-reverse;
+
+    @media (min-width: 1024px) {
+      flex-direction: row;
+      margin-top: 48vh;
+    }
 
     &-item {
+      display: flex;
+      flex-wrap: wrap;
+
+      &-gallery {
+        display: flex;
+        width: 100%;
+        overflow-x: scroll;
+
+        img {
+          object-fit: cover;
+          width: 200px;
+          height: auto;
+
+          @media (min-width: 1024px) {
+            width: 375px;
+            height: auto;
+          }
+        }
+      }
+
+      &-actors {
+        width: 100%;
+      }
+
       h1 {
         font-size: 4.5rem;
       }
@@ -69,40 +116,46 @@
         -webkit-line-clamp: 15; /* number of lines to show */
         line-clamp: 15;
         -webkit-box-orient: vertical;
-        white-space:pre-line;
+        white-space: pre-line;
       }
 
-      &-trailer{
+      &-trailer {
         margin-top: 2rem;
         iframe {
+          width: 100%;
+          height: auto;
           border: none;
+
+          @media (min-width: 1024px) {
+            width: 800px;
+            height: 500px;
+          }
         }
       }
     }
 
     &-item:nth-child(1) {
-      width: 35%;
-      // border: 1px solid yellowgreen;
-      display: flex;
+      width: 100%;
       justify-content: center;
+
+      @media (min-width: 1024px) {
+        width: 35%;
+      }
 
       img {
         object-fit: contain;
         width: auto;
         height: 50vh;
-        border-radius: 8px;
-        border-top: 0.5px solid rgba(255, 255, 255, 1);
-        border-right: 0.5px solid rgba(255, 255, 255, 0.75);
-        border-left: 2px solid rgba(0, 0, 0, 0.65);
-        border-bottom: 2px solid rgba(0, 0, 0, 0.65);
       }
     }
 
     &-item:nth-child(2) {
-      display: flex;
+      width: 100%;
       flex-direction: column;
-      width: 65%;
-    }
 
+      @media (min-width: 1024px) {
+        width: 65%;
+      }
+    }
   }
 }
